testing a fix for the behaviour of the layout with the  svg when zooming in on mobile

--- a/src/pages/CheatSheets/Css/Flexbox/FlexboxCheatSheet.styles.css
+++ b/src/pages/CheatSheets/Css/Flexbox/FlexboxCheatSheet.styles.css
@@ -27,7 +27,7 @@
     justify-content: center;
     align-content: center;
     align-items: center;
-    width: 100vw;
+    width: 20rem;
   }
   /* Contains the first row of 4 buttons */
   .cheat-sheet-options-container {
@@ -35,7 +35,7 @@
     flex-direction: row;
     justify-content: space-evenly;
     margin: var(--button-actionable-mobile-margin) 0;
-    width: 100vw;
+    max-width: 100%;
   }
   /* Contains the second row of 4 buttons */
   .cheat-sheet-sub-options-container {
@@ -43,7 +43,7 @@
     flex-direction: row;
     justify-content: space-evenly;
     margin: 0 0 var(--button-actionable-mobile-margin) 0;
-    width: 100vw;
+    width: 100%;
   }
   /* Contains the svg flexbox */
   .cheat-sheet-svg {
